# MineMate

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  opencode.json  package-lock.json  package.json
.githooks/: pre-push
config/: default.toml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: default.toml
src-tauri/database/: minemate.db
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: chat_handler.rs  client.rs  context.rs  mod.rs  prompt.rs  tools.rs
src-tauri/src/ai/planner/: mod.rs  task_planner.rs
src-tauri/src/ai/provider/: mod.rs  traits.rs
src-tauri/src/blueprint/: loader.rs  materials.rs  mod.rs  parser.rs  transform.rs  types.rs  verifier.rs
src-tauri/src/blueprint/formats/: litematic.rs  mod.rs  nbt_structure.rs  schem.rs  schematic.rs
src-tauri/src/blueprint/importers/: mod.rs
src-tauri/src/blueprint/importers/grabcraft/: cache.rs  downloader.rs  html_parser.rs  image_parser.rs  legend.rs  mod.rs
src-tauri/src/bot/: client.rs  events.rs  follow.rs  guard.rs  handler.rs  mod.rs  pathfinding.rs
src-tauri/src/builder/: creative_manager.rs  executor.rs  mod.rs  placement.rs  planner.rs  scaffolding.rs
src-tauri/src/commands/: bot.rs  config.rs  memory.rs  mod.rs  parser.rs
src-tauri/src/config/: settings.rs
src-tauri/src/executor/: actions.rs  audit.rs  automation.rs  mod.rs  security.rs  tasks.rs
src-tauri/src/memory/: db.rs
src-tauri/src/task_engine/: executor.rs  mod.rs  queue.rs  types.rs
src/components/blueprints/: Blueprints.tsx
src/components/chat/: ChatLog.tsx
src/components/config/: ConfigPanel.tsx
src/components/dashboard/: Dashboard.tsx
src/components/shell/: SideNavBar.tsx  TopNavBar.tsx
src/components/tasks/: TaskQueue.tsx
src/hooks/: useTauri.ts
src/styles/: pixel-brutalism.css
stitch_minemate_ai_control_panel/crafted_interface/: DESIGN.md
stitch_minemate_ai_control_panel/minemate_chat_v3/: code.html
stitch_minemate_ai_control_panel/minemate_config_v3/: code.html
stitch_minemate_ai_control_panel/minemate_dashboard_v3/: code.html
stitch_minemate_ai_control_panel/minemate_tasks_v3/: code.html
