[package]
name = "minemate"
version = "0.1.0"
edition = "2021"
description = "MineMate - AI-powered Minecraft staff bot"
authors = ["Pamod Madubashana"]

[lib]
name = "minemate_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
azalea = { git = "https://github.com/azalea-rs/azalea" }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
