[package]
name = "minemate"
version = "0.1.0"
edition = "2021"
description = "MineMate - AI-powered Minecraft staff bot"
authors = ["Pamod Madubashana"]

[lib]
name = "minemate_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
azalea = { git = "https://github.com/azalea-rs/azalea" }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
async-trait = "0.1"
image = "0.25"
scraper = "0.20"

# Debug-mode builds run azalea's ECS systems 10-100x slower unoptimized,
# which causes the 60 Hz schedule loop to exceed its 16.6 ms budget,
# starving the event handler task and ultimately disconnecting the bot.
# Keep all dependencies optimized even in dev builds.
[profile.dev.package."*"]
opt-level = 2
[profile.dev]
opt-level = 0

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
